# Hackathon-Project

./: .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
history/adr/: 1-ros2-distribution-selection.adr.md
history/prompts/001-humanoid-robotics/: 1-create-spec.spec.md  2-create-plan.plan.md  3-create-tasks.tasks.md
history/prompts/constitution/: 1-create-physical-ai-humanoid.constitution.prompt.md
history/prompts/general/: 1-start-docusaurus-server.general.prompt.md
history/prompts/humanoid-robotics/: 2-create-humanoid-robotics-spec.plan.spec.md
physical-ai-book/: README.md  docusaurus.config.js  docusaurus.config.ts  sidebars.js  sidebars.ts
physical-ai-book/docs/: intro.md
physical-ai-book/docs/module-1-ros2/: concepts.md  index.md  rclpy-control.md  urdf-modeling.md
physical-ai-book/docs/module-2-digital-twin/: gazebo-setup.md  index.md  sensor-simulation.md
physical-ai-book/docs/module-3-isaac/: index.md  isaac-overview.md
physical-ai-book/docs/module-4-vla/: capstone.md  index.md  llm-planning.md  voice-processing.md
physical-ai-book/docs/reference/: api-docs.md  ros2-topics.md  simulation-parameters.md
physical-ai-book/src/components/HomepageFeatures/: index.tsx
physical-ai-book/src/pages/: index.tsx
simulation/worlds/: humanoid_world.sdf
specs/001-humanoid-robotics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-humanoid-robotics/checklists/: requirements.md
specs/001-humanoid-robotics/contracts/: ros2_interfaces.md
src/ros2_module/: CMakeLists.txt  command_interpreter.py  robot_controller.py  sensor_publisher.py  setup.py
src/ros2_module/launch/: basic_robot_system.launch.py
src/ros2_module/msg/: Entity.msg  NaturalLanguageCommand.msg  RobotCommand.msg  SpeechRecognitionResult.msg
src/ros2_module/srv/: JointControl.srv  RobotState.srv
src/ros2_module/urdf/: humanoid_robot.xacro
